Add direct_upload function
